k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-app
  template:
    metadata:
      labels:
        app: mi-app
    spec:
      containers:
        - name: mi-app
          image: mi-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mi-app
  namespace: default
spec:
  selector:
    app: mi-app
  ports:
    - port: 80
      targetPort: 80
